testdata/parser/ok/TPOK_ConditionalFalse.java
int main() {
		if (false) {
			printInt(2);
		} else {
			printInt(3);
		}
		return 0;
}
