testdata/parser/error/BadAssignmentErrorNested.java
int main() {
    	if (true) {
    		
    	} else {
    		while (false) {
    			1 = 5*3;
    		}
    	}
}